src/tests/snapshots/fern__tests__parser__parse_pipeline.snap
---
source: src/tests/parser.rs
expression: nodes
---
[
    Ok(
        Node {
            class: CmdList {
                elements: [
                    ConjunctNode {
                        cmd: Node {
                            class: Pipeline {
                                cmds: [
                                    Node {
                                        class: Command {
                                            assignments: [],
                                            argv: [
                                                Tk {
                                                    class: Str,
                                                    err_span: None,
                                                    err: Null,
                                                    span: Span {
                                                        range: 0..4,
                                                        source: "echo foo | sed s/foo/bar",
                                                    },
                                                    flags: TkFlags(
                                                        IS_CMD,
                                                    ),
                                                },
                                                Tk {
                                                    class: Str,
                                                    err_span: None,
                                                    err: Null,
                                                    span: Span {
                                                        range: 5..8,
                                                        source: "echo foo | sed s/foo/bar",
                                                    },
                                                    flags: TkFlags(
                                                        0x0,
                                                    ),
                                                },
                                            ],
                                        },
                                        flags: NdFlags(
                                            0x0,
                                        ),
                                        redirs: [],
                                        tokens: [
                                            Tk {
                                                class: Str,
                                                err_span: None,
                                                err: Null,
                                                span: Span {
                                                    range: 0..4,
                                                    source: "echo foo | sed s/foo/bar",
                                                },
                                                flags: TkFlags(
                                                    IS_CMD,
                                                ),
                                            },
                                            Tk {
                                                class: Str,
                                                err_span: None,
                                                err: Null,
                                                span: Span {
                                                    range: 5..8,
                                                    source: "echo foo | sed s/foo/bar",
                                                },
                                                flags: TkFlags(
                                                    0x0,
                                                ),
                                            },
                                        ],
                                    },
                                    Node {
                                        class: Command {
                                            assignments: [],
                                            argv: [
                                                Tk {
                                                    class: Str,
                                                    err_span: None,
                                                    err: Null,
                                                    span: Span {
                                                        range: 11..14,
                                                        source: "echo foo | sed s/foo/bar",
                                                    },
                                                    flags: TkFlags(
                                                        IS_CMD,
                                                    ),
                                                },
                                                Tk {
                                                    class: Str,
                                                    err_span: None,
                                                    err: Null,
                                                    span: Span {
                                                        range: 15..24,
                                                        source: "echo foo | sed s/foo/bar",
                                                    },
                                                    flags: TkFlags(
                                                        0x0,
                                                    ),
                                                },
                                            ],
                                        },
                                        flags: NdFlags(
                                            0x0,
                                        ),
                                        redirs: [],
                                        tokens: [
                                            Tk {
                                                class: Str,
                                                err_span: None,
                                                err: Null,
                                                span: Span {
                                                    range: 11..14,
                                                    source: "echo foo | sed s/foo/bar",
                                                },
                                                flags: TkFlags(
                                                    IS_CMD,
                                                ),
                                            },
                                            Tk {
                                                class: Str,
                                                err_span: None,
                                                err: Null,
                                                span: Span {
                                                    range: 15..24,
                                                    source: "echo foo | sed s/foo/bar",
                                                },
                                                flags: TkFlags(
                                                    0x0,
                                                ),
                                            },
                                        ],
                                    },
                                ],
                                pipe_err: false,
                            },
                            flags: NdFlags(
                                0x0,
                            ),
                            redirs: [],
                            tokens: [
                                Tk {
                                    class: Str,
                                    err_span: None,
                                    err: Null,
                                    span: Span {
                                        range: 0..4,
                                        source: "echo foo | sed s/foo/bar",
                                    },
                                    flags: TkFlags(
                                        IS_CMD,
                                    ),
                                },
                                Tk {
                                    class: Str,
                                    err_span: None,
                                    err: Null,
                                    span: Span {
                                        range: 5..8,
                                        source: "echo foo | sed s/foo/bar",
                                    },
                                    flags: TkFlags(
                                        0x0,
                                    ),
                                },
                                Tk {
                                    class: Pipe,
                                    err_span: None,
                                    err: Null,
                                    span: Span {
                                        range: 9..10,
                                        source: "echo foo | sed s/foo/bar",
                                    },
                                    flags: TkFlags(
                                        0x0,
                                    ),
                                },
                                Tk {
                                    class: Str,
                                    err_span: None,
                                    err: Null,
                                    span: Span {
                                        range: 11..14,
                                        source: "echo foo | sed s/foo/bar",
                                    },
                                    flags: TkFlags(
                                        IS_CMD,
                                    ),
                                },
                                Tk {
                                    class: Str,
                                    err_span: None,
                                    err: Null,
                                    span: Span {
                                        range: 15..24,
                                        source: "echo foo | sed s/foo/bar",
                                    },
                                    flags: TkFlags(
                                        0x0,
                                    ),
                                },
                            ],
                        },
                        operator: Null,
                    },
                ],
            },
            flags: NdFlags(
                0x0,
            ),
            redirs: [],
            tokens: [
                Tk {
                    class: Str,
                    err_span: None,
                    err: Null,
                    span: Span {
                        range: 0..4,
                        source: "echo foo | sed s/foo/bar",
                    },
                    flags: TkFlags(
                        IS_CMD,
                    ),
                },
                Tk {
                    class: Str,
                    err_span: None,
                    err: Null,
                    span: Span {
                        range: 5..8,
                        source: "echo foo | sed s/foo/bar",
                    },
                    flags: TkFlags(
                        0x0,
                    ),
                },
                Tk {
                    class: Pipe,
                    err_span: None,
                    err: Null,
                    span: Span {
                        range: 9..10,
                        source: "echo foo | sed s/foo/bar",
                    },
                    flags: TkFlags(
                        0x0,
                    ),
                },
                Tk {
                    class: Str,
                    err_span: None,
                    err: Null,
                    span: Span {
                        range: 11..14,
                        source: "echo foo | sed s/foo/bar",
                    },
                    flags: TkFlags(
                        IS_CMD,
                    ),
                },
                Tk {
                    class: Str,
                    err_span: None,
                    err: Null,
                    span: Span {
                        range: 15..24,
                        source: "echo foo | sed s/foo/bar",
                    },
                    flags: TkFlags(
                        0x0,
                    ),
                },
            ],
        },
    ),
]
