src/tests/snapshots/fern__tests__parser__parse_simple.snap
---
source: src/tests/parser.rs
expression: nodes
---
[
    Ok(
        Node {
            class: CmdList {
                elements: [
                    ConjunctNode {
                        cmd: Node {
                            class: Pipeline {
                                cmds: [
                                    Node {
                                        class: Command {
                                            assignments: [],
                                            argv: [
                                                Tk {
                                                    class: Str,
                                                    span: Span {
                                                        range: 0..4,
                                                        source: "echo hello world",
                                                    },
                                                    flags: TkFlags(
                                                        IS_CMD | BUILTIN,
                                                    ),
                                                },
                                                Tk {
                                                    class: Str,
                                                    span: Span {
                                                        range: 5..10,
                                                        source: "echo hello world",
                                                    },
                                                    flags: TkFlags(
                                                        0x0,
                                                    ),
                                                },
                                                Tk {
                                                    class: Str,
                                                    span: Span {
                                                        range: 11..16,
                                                        source: "echo hello world",
                                                    },
                                                    flags: TkFlags(
                                                        0x0,
                                                    ),
                                                },
                                            ],
                                        },
                                        flags: NdFlags(
                                            0x0,
                                        ),
                                        redirs: [],
                                        tokens: [
                                            Tk {
                                                class: Str,
                                                span: Span {
                                                    range: 0..4,
                                                    source: "echo hello world",
                                                },
                                                flags: TkFlags(
                                                    IS_CMD | BUILTIN,
                                                ),
                                            },
                                            Tk {
                                                class: Str,
                                                span: Span {
                                                    range: 5..10,
                                                    source: "echo hello world",
                                                },
                                                flags: TkFlags(
                                                    0x0,
                                                ),
                                            },
                                            Tk {
                                                class: Str,
                                                span: Span {
                                                    range: 11..16,
                                                    source: "echo hello world",
                                                },
                                                flags: TkFlags(
                                                    0x0,
                                                ),
                                            },
                                        ],
                                    },
                                ],
                                pipe_err: false,
                            },
                            flags: NdFlags(
                                0x0,
                            ),
                            redirs: [],
                            tokens: [
                                Tk {
                                    class: Str,
                                    span: Span {
                                        range: 0..4,
                                        source: "echo hello world",
                                    },
                                    flags: TkFlags(
                                        IS_CMD | BUILTIN,
                                    ),
                                },
                                Tk {
                                    class: Str,
                                    span: Span {
                                        range: 5..10,
                                        source: "echo hello world",
                                    },
                                    flags: TkFlags(
                                        0x0,
                                    ),
                                },
                                Tk {
                                    class: Str,
                                    span: Span {
                                        range: 11..16,
                                        source: "echo hello world",
                                    },
                                    flags: TkFlags(
                                        0x0,
                                    ),
                                },
                            ],
                        },
                        operator: Null,
                    },
                ],
            },
            flags: NdFlags(
                0x0,
            ),
            redirs: [],
            tokens: [
                Tk {
                    class: Str,
                    span: Span {
                        range: 0..4,
                        source: "echo hello world",
                    },
                    flags: TkFlags(
                        IS_CMD | BUILTIN,
                    ),
                },
                Tk {
                    class: Str,
                    span: Span {
                        range: 5..10,
                        source: "echo hello world",
                    },
                    flags: TkFlags(
                        0x0,
                    ),
                },
                Tk {
                    class: Str,
                    span: Span {
                        range: 11..16,
                        source: "echo hello world",
                    },
                    flags: TkFlags(
                        0x0,
                    ),
                },
            ],
        },
    ),
]
